--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,23 @@
 <p id="notice"><%= notice %></p>
+<div class= "container">
+<%= high_chart("orders_chart", @chart) %>
+
+
+<h2>Recent Entries</h2>
+<table id="recent-table" class="table table-striped table-bordered table-condensed">
+  <tr>
+    <td>Date</td>
+    <td>Weight</td>
+  </tr>
+<% @days_sorted.each do |x| %>
+<tr>
+<td><%=x.date%></td>
+<td><%=x.weight%></td>
+</tr>
+<% end%>
+</table>
+
+
 
 <p>
   <strong>First name:</strong>
@@ -9,6 +28,6 @@
   <strong>Last name:</strong>
   <%= @user.last_name %>
 </p>
-
+</div>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
