--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
   
 </head>
@@ -24,19 +25,22 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to 'input weight', days_new_path %> </li>
-          <li><%= link_to 'profile', user_path(current_user.id)%></li>
-          <li><%= link_to('logout', destroy_user_session_path, :method => :delete) %></li>
+          <li><%= link_to 'Input Weight', days_new_path, class: "btn btn-small btn-success" %> </li>
+          <li><%= link_to 'Profile', user_path(current_user.id), class: "btn btn-small btn-primary"%></li>
+          <li><%= link_to('Logout', destroy_user_session_path, class: "btn btn-small btn-warning", :method => :delete) %></li>
             <% else %>
-          <li><%= link_to('login', new_user_session_path) %> </li>
+              <li><%= link_to 'Login', new_user_session_path, class: "btn btn-small btn-primary", style: "color:white" %></li>
+          <li><%= link_to'Signup', new_user_registration_path, class: "btn btn-small btn-warning", style: "color:white" %> </li>
         <% end %>
     </div>
   </nav>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
-<%= yield %>
-
+  <%= yield %>
+  <footer class="footer">
+    <a href="http://www.javascriptisscary.com/">&copy; JavaScriptisScary.com</a>
+  </footer>
 </body>
 </html>
