landing page, cleaning input page

--- a/app/assets/stylesheets/days.scss
+++ b/app/assets/stylesheets/days.scss
@@ -10,3 +10,28 @@
 h2 {
     margin-top:10%;
 }
+
+.weight-change {
+    
+    margin-bottom:5%;
+}
+
+
+h3 {
+    font-family: "Kalam", "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 2.5em;
+}
+
+
+.form-horizontal {
+    margin: 0 auto;
+    
+}
+
+#submit {
+   margin: 5% auto; 
+}
+
+#submit:hover {
+    color:black;
+}
