--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,12 +1,11 @@
 .footer {
   background-color: black;
-  
+  margin-top:1%;
   border-top: 2px solid #808080;
   height:20px;
   width: 100%;
   color:white;
-  position: fixed;
-  bottom: 0;
+  
 }
 
 .footer a {
