--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -14,7 +14,11 @@
 }
 
 h1 {
-    font-size: 4em;
+    font-size: 6em;
+    margin-top:10%;
+    color: black;
+    text-shadow: 2px 1px gray;
+    text-decoration: underline;
     
 }
 
