--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,6 @@
-<%= image_tag("scale2.JPG", class: "img-responsive welcome") %>
+<%= image_tag("scale3.JPG", class: "img-responsive welcome") %>
 <div class="container" id="welcome-contain">
-  <h1 class="kalam">Features</h1>
+  <h1 class="kalam">Why Weight-Tracker?</h1>
   <h3 class="kalam header">Tracking</h3>
   <p>Tracking your daily weight is as easy as:</p>
   <ol class="list">
@@ -27,5 +27,6 @@
   
   
 </div>
+<%= render "layouts/footer" %>
 
 
