design work, validations, datepicker

--- a/app/assets/stylesheets/days.scss
+++ b/app/assets/stylesheets/days.scss
@@ -12,7 +12,7 @@ h2 {
 }
 
 .weight-change {
-    
+    margin-top: 5%;
     margin-bottom:5%;
 }
 
@@ -34,4 +34,8 @@ h3 {
 
 #submit:hover {
     color:black;
+}
+
+#recent-table td {
+    border: 2px solid silver;
 }
