--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -3,14 +3,21 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .welcome {
- border-top: 4px solid gray;
- border-bottom: 4px solid gray;
+ border-top: 2px solid gray;
+ border-bottom: 1px solid black;
+ 
 }
 
 .kalam {
     
     font-family: "kalam", verdana,  arial,helvetica, sans-serif;
     
+}
+
+
+body{
+   background-image: asset-data-url("fresh_snow.png");
+     background-repeat:repeat;
 }
 
 h1 {
@@ -29,29 +36,97 @@ p {
 
 .header {
     
-    margin-top:10%;
-    text-decoration: underline;
+    margin-top:5%;
+    font-family: "lato"
+}
+
+.lato {
+    font-family: "lato"
 }
 
 .list {
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin-top:5%;
     margin-bottom: 5%;
-    line-height: 150%;
+    line-height: 200%;
 }
 
 .features-pic {
     
     box-shadow: 10px 10px 5px grey;
+    border: 1px solid black;
+    border-radius: 4px;
  
 }
 
-#welcome-contain{
-    text-align:center;
-    
-}
+
 
 .sign-up {
     font-size: 1.5em;
     text-decoration: underline;
+}
+
+
+.border {
+    
+     box-shadow: 2px 2px 3px #888888;
+     border-bottom: 2px solid gray;
+     margin-top: 2%;
+     margin-bottom:2%;
+}
+
+
+
+.glyphicon{
+    font-size:8em;
+    margin-top: 5%;
+    text-align:center;
+}
+
+.container{
+   margin-top:2%;
+   
+   padding-bottom:1%;
+    
+    
+    background-color:auto;
+}
+
+
+#signup {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  text-shadow: 1px 1px 1px #666666;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  
+}
+
+
+
+#signup:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+#sent{
+    margin-bottom:5%;
 }
