--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,32 +1,39 @@
-<%= image_tag("scale3.JPG", class: "img-responsive welcome") %>
-<div class="container" id="welcome-contain">
-  <h1 class="kalam">Why Weight-Tracker?</h1>
-  <h3 class="kalam header">Tracking</h3>
-  <p>Tracking your daily weight is as easy as:</p>
-  <ol class="list">
-    <li>Wake up</li>
-    <li>Weigh Yourself</li>
-    <li>Input your weight on the site.</li>
-  </ol>
-  <p class="text-left">All of your weight data will be kept in our database for easy access.</p>
-  <p class="text-left"> Want to edit a previous entry? No problem! Want to see how much you weighed last Thanksgiving?
-  No problem! Want to see an area graph of your progress? No problem!</p>
-  <h3 class="kalam header">Graphs</h3>
-  <p>Beautiful area graph to display your progress.</p>
+<%= image_tag("bread2.jpg", class: "img-responsive welcome") %>
+
+<section class="container text-center lato">
+  <span class="glyphicon glyphicon-floppy-saved"></span>
+  <h3 class= "header">Tracking</h3>
+  <p>It's <strong>free</strong> and always will be.</p>
+
+
+  </section>
+<div class="border"></div>
+<section class="container text-center lato">
+  <span class="glyphicon glyphicon-signal"></span>
+  <h3 class="header">Graphs</h3>
+  <p>Beautiful area graphs to display your progress.</p>
   <%= image_tag("area-graph.jpg", class: "img-responsive features-pic") %>
-  <h3 class="kalam header">Tables</h3>
+  <h3 class="header">Tables</h3>
   <%= image_tag("table-pic.jpg", class: "img-responsive features-pic") %>
-  <h3 class="kalam header">Coming Soon</h3>
+</section>
+<div class="border"></div>
+<section class="container text-center lato">
+  <span class="glyphicon glyphicon-certificate"></span>
+  <h3 class="header">Coming Soon</h3>
   <ul class="list">
     <li>Notes for each day, stored to the database.</li>
     <li>Save pictures from specific days to SEE your progress.</li>
     <li>Goal weight and graph.</li>
   </ul>
-  <h3 class="text-center kalam header"> Sign up today!</h3>
-  <%= link_to 'Signup!', new_user_registration_path, class: "btn btn-info sign-up", style: "color:black;" %>
-  
-  
-</div>
+</section>
+  <div class="border"></div>
+  <section class="container text-center lato">
+    <span class="glyphicon glyphicon-pencil"></span>
+  <h3 class="header">Sign up</h3>
+  <p id="sent">Tracking weight is <a href="http://www.news.cornell.edu/stories/2015/06/keeping-track-weight-daily-may-tip-scale-your-favor">proven</a> to help keep the pounds of your body, and make you look your best!</p>
+  <%= link_to 'Signup!', new_user_registration_path, id: "signup"%>
+</section>
+
 <%= render "layouts/footer" %>
 
 
