--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing User</h1>
+<div class="container text-center">
+<h2 class="kalam">Editing User</h2>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+</div>
+<%= render 'layouts/sticky_footer' %>
