--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,15 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Listing Users</h1>
+<div class="container">
+<h1 class="kalam text-center">Listing Users</h1>
 
-<table>
+<table class="table table-bordered text-center">
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th colspan="3"></th>
+      <th class="text-center">First name</th>
+      <th class="text-center">Last name</th>
+      <th class="text-center">Email</th>
+      <th class="text-center">Entries</th>
+      <th colspan=3 class="text-center">Options</th>
     </tr>
   </thead>
 
@@ -16,6 +18,8 @@
       <tr>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
+        <td><%= user.email %></td>
+        <td><%= link_to "Entries", days_index_path(user)%></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,6 +28,6 @@
   </tbody>
 </table>
 
-<br>
+</div>
 
 <%= link_to 'New User', new_user_path %>
