--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,32 @@
 
-<p id="notice"><%= notice %></p>
+
 <div class= "container">
-  <p class="text-center weight-change">
-  <strong>Recent Weight Change: </strong> 
- <%= weight_change(@last_7) %></p>
+  
 <%= high_chart("orders_chart", @chart) %>
-
-
-<h2>Recent Entries</h2>
-<table id="recent-table" class="table table-striped table-bordered table-condensed">
-  <tr>
-    <td>Date</td>
-    <td>Weight</td>
-  </tr>
+<p class="text-center weight-change">
+  <strong>Total Weight Change: </strong> 
+ <%= total_weight_change(@all) %></p>
+  <h2 class="kalam">Recent Entries</h2>
+  <table id="recent-table" class="table table-striped table-bordered table-condensed">
+    <thead>
+      <tr>
+        <td>Date</td>
+        <td>Weight</td>
+    </tr>
+    </thead>
+    <tbody>
 <% @last_7.each do |x| %>
-<tr class="context">
-<td><%=x.date%></td>
-<td class ="weight"><%=x.weight%></td>
-</tr>
+  <tr class="context">
+    <td><%=x.date%></td>
+    <td class ="weight"><%=x.weight%></td>
+  </tr>
 <% end%>
-</table>
-
-
-
-
-
-
+    </tbody>
+  </table>
+  <p class="text-center weight-change">
+    <strong>Recent Weight Change: </strong> 
+ <%= weight_change(@last_7) %></p>
 </div>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<p><%= link_to 'View/Edit all dates', days_index_path%></p>
+<p><%= link_to 'Edit Profile', edit_user_path(@user)%></p>
 <%= render "layouts/footer" %>
