--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -30,7 +30,7 @@
   <section class="container text-center lato">
     <span class="glyphicon glyphicon-pencil"></span>
   <h3 class="header">Sign up</h3>
-  <p id="sent">Tracking weight is <a href="http://www.news.cornell.edu/stories/2015/06/keeping-track-weight-daily-may-tip-scale-your-favor">proven</a> to help keep the pounds of your body, and make you look your best!</p>
+  <p id="sent">Tracking weight is <a href="http://www.news.cornell.edu/stories/2015/06/keeping-track-weight-daily-may-tip-scale-your-favor" target="_blank">proven</a> to help keep the pounds of your body, and make you look your best!</p>
   <%= link_to 'Signup!', new_user_registration_path, id: "signup"%>
 </section>
 
