--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-<h1 class="kalam text-center">Listing Users</h1>
+<h2 class="lato text-center">Listing Users</h2>
 
 <table class="table table-bordered text-center">
   <thead>
@@ -30,4 +30,4 @@
 
 </div>
 
-<%= link_to 'New User', new_user_path %>
+
