--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -42,9 +42,9 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
+  margin: auto;
   background-color: red;
-  display: table;
+  width:50%;
 }
 
 #error_explanation {
@@ -54,6 +54,8 @@ div {
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+  margin-left: auto;
+  margin-right:auto;
 
   h2 {
     text-align: left;
