--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,23 @@
-<div class="container">
-<h2 class ="kalam">Sign up</h2>
+<div class="container text-center">
+<h2 class ="kalam">Sign up!</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="form-horizontal">
+  <div class="field form-horizontal">
     <%= f.label :email, class: "control-label" %>
     <%= f.email_field :email, autofocus: true,  class: "form-control" %>
   </div>
 
-  <div class="form-horizontal">
+  <div class="field form-horizontal">
     <%= f.label :password,  class: "control-label"%>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "off",  class: "form-control" %>
   </div>
 
-  <div class="form-horizontal">
+  <div class="field form-horizontal">
     <%= f.label :password_confirmation, class: "control-label" %>
     <%= f.password_field :password_confirmation, autocomplete: "off",  class: "form-control" %>
   </div>
