--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,15 @@
 
 <div class= "container">
   
+    
 <%= high_chart("orders_chart", @chart) %>
+<%unless @user_days.length ==1%>
 <p class="text-center weight-change">
   <strong>Total Weight Change: </strong> 
  <%= total_weight_change(@all) %></p>
+<%else%>
+  <h2 class="lato text-center">Enter more dates for better tracking and features.</h2>
+<%end%>
   <h2 class="kalam">Recent Entries</h2>
   <table id="recent-table" class="table table-striped table-bordered table-condensed">
     <thead>
@@ -23,10 +28,15 @@
 <% end%>
     </tbody>
   </table>
+  <%unless @user_days.length ==1%>
   <p class="text-center weight-change">
     <strong>Recent Weight Change: </strong> 
  <%= weight_change(@last_7) %></p>
+  <%end%>
 </div>
 <p><%= link_to 'View/Edit all dates', days_index_path%></p>
 <p><%= link_to 'Edit Profile', edit_user_path(@user)%></p>
+<%if current_user.admin?%>
+ <p><%= link_to 'Admin', users_index_path%></p>
+<%end%>
 <%= render "layouts/footer" %>
