--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
       <th class="text-center">Last name</th>
       <th class="text-center">Email</th>
       <th class="text-center">Entries</th>
-      <th colspan=3 class="text-center">Options</th>
+      <th colspan=2 class="text-center">Options</th>
     </tr>
   </thead>
 
@@ -19,9 +19,8 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
-        <td><%= link_to "Entries", days_index_path(user)%></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= user.days.length%></td>
+        <td><%= link_to 'Edit User', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
