--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <a href="http://www.javascriptisscary.com/">&copy; JavaScriptisScary.com</a>
+    <a class="footer-link" href="http://www.javascriptisscary.com/">&copy; JavaScriptisScary.com</a>
 </footer>
