fix mobile view

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,6 +26,6 @@
     <%= f.submit "Sign up!", class:"btn btn-lg btn-success", id:"submit" %>
   </div>
 <% end %>
+<%= link_to 'Already a member? Login here!', new_user_path %>
 </div>
-<%= render "devise/shared/links" %>
 <%= render "layouts/sticky_footer" %>
