redesign front page and logo

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -2,6 +2,7 @@
     color: white;
 }
 
+
 .btn {
     margin-left:4%;
     margin-right: 4%;
@@ -42,4 +43,12 @@
 .navbar {
     margin-bottom:0;
     border-radius:0;
+    z-index: 1000;
+    background-color: black;;
+    border: none;
+}
+
+#glyphicon-scale{
+  font-size:4em;
+  color:red;
 }
