--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -2,11 +2,74 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.welcome {
- border-top: 2px solid gray;
- border-bottom: 1px solid black;
- 
+body{
+  background-image: asset-data-url("noise.png");
+  background-repeat:repeat;
+  background-color: #fff;
+  color: #333;
+  font-family: "lato", verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
 }
+
+#welcome{
+    background: transparent asset-data-url("blueberries.jpg") no-repeat scroll left top / cover;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    color: white;
+   
+}
+
+.logo {
+    margin:5% auto;
+    border: 2px solid black;
+}
+
+#content {
+    background: white;
+    width: 100%;
+    top:100%;
+    position: absolute;
+    box-shadow: 0px 0px 15px black;
+    z-index:100;
+}
+
+
+
+#text-contain {
+    background-color:rgba(255,0,0,0.5);
+    margin-top:3%;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+#text-contain2 {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding-bottom: 0;
+    padding-top: .5%;
+    
+}
+
+.welcome-text {
+    text-shadow: 2px 2px black;
+    font-family: "lato" arial sans-serif;
+    font-weight: 700;
+    font-size: 5em;
+    
+}
+
+#paragraph {
+    font-size: 1.6em;
+    text-shadow: 1px 1px black;
+    line-height: 1.42857;
+    color: BeanRed;
+    
+    
+}
+
 
 .kalam {
     
@@ -15,19 +78,9 @@
 }
 
 
-body{
-   background-image: asset-data-url("fresh_snow.png");
-     background-repeat:repeat;
-}
 
-h1 {
-    font-size: 6em;
-    margin-top:10%;
-    color: black;
-    text-shadow: 2px 1px gray;
-    text-decoration: underline;
-    
-}
+
+
 
 p {
     font-size: 1.2em;
@@ -41,7 +94,7 @@ p {
 }
 
 .lato {
-    font-family: "lato"
+    font-family: "lato", sans-serif;
 }
 
 .list {
@@ -82,6 +135,8 @@ p {
     font-size:8em;
     margin-top: 5%;
     text-align:center;
+    color: black;
+    text-shadow: 1px 1px black;
 }
 
 .container{
@@ -116,7 +171,10 @@ p {
   
 }
 
-
+#button-contain{
+    margin-top:5%;
+    
+}
 
 #signup:hover {
   background: #3cb0fd;
@@ -128,6 +186,47 @@ p {
   text-decoration: none;
 }
 
+
+#signup-welcome {
+  
+ background: #34d94d;
+  background-image: -webkit-linear-gradient(top, #34d94d, #2cb882);
+  background-image: -moz-linear-gradient(top, #34d94d, #2cb882);
+  background-image: -ms-linear-gradient(top, #34d94d, #2cb882);
+  background-image: -o-linear-gradient(top, #34d94d, #2cb882);
+  background-image: linear-gradient(to bottom, #34d94d, #2cb882);
+  -webkit-border-radius: 13;
+  -moz-border-radius: 13;
+  border-radius: 13px;
+  color: #ffffff;
+  font-size: 3em;
+  padding: 10px 20px 10px 20px;
+  border: solid #1f628d 2px;
+  text-decoration: none;
+  
+}
+
+
+
+#signup-welcome:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+
+
+
 #sent{
     margin-bottom:5%;
+}
+
+#light-welcome {
+    color: red;
+    font-size: 20em;
+    text-shadow: 2px 2px black;
 }
