--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%=link_to 'Weight Tracker', root_path, class:"navbar-brand"%>
+        <%= link_to image_tag("wt.jpg", class: "navbar-brand img-circle"), root_path  %>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
@@ -32,9 +32,10 @@
           <li><%= link_to 'Input Weight', days_new_path, class: "btn btn-small btn-success" %> </li>
           <li><%= link_to 'Profile', user_path(current_user.id), class: "btn btn-small btn-primary"%></li>
           <li><%= link_to('Logout', destroy_user_session_path, class: "btn btn-small btn-warning", :method => :delete) %></li>
+      </ul>
             <% else %>
               <li><%= link_to 'Login', new_user_session_path, class: "btn btn-small btn-primary" %></li>
-          <li><%= link_to'Signup', new_user_registration_path, class: "btn btn-small btn-warning"%> </li>
+          </ul>
         <% end %>
     </div>
     </div>
