--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -74,7 +74,7 @@ div {
   color:white;
   background-color:green;
   margin:0;
-  
+  z-index:10000;
 }
 
 .alert{
@@ -82,6 +82,7 @@ div {
   color:white;
   background-color:red;;
   margin:0;
+  z-index: 10000;
 }
 
 .form-control {
