--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -13,7 +13,7 @@ body{
 }
 
 #welcome{
-    background: transparent asset-data-url("blueberries.jpg") no-repeat scroll left top / cover;
+    background: transparent asset-data-url("berries.jpg") no-repeat scroll left top / cover;
     width: 100%;
     height: 100%;
     position: fixed;
