quick mobile js fix

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,6 @@
 <div id="welcome" class="text-center">
   <div class="container">
-    <%= image_tag("wt.jpg", class: "img-responsive img-circle logo") %>
+    <%= image_tag("wt.jpg", class: "img-responsive img-circle", id: "logo") %>
   </div>
   <div  id="text-contain">
     <h1 class="lato welcome-text"><strong>The new way to track your weight.</strong></h1>
